...
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:backgroundTintMode="src_over">


    <androidx.cardview.widget.CardView
        android:id="@+id/content_card_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="5dp"
...
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/name_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
...

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/content_card_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="5dp"
...
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/description_edittext"
                android:layout_width="0dp"
                android:layout_height="170dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
...
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/content_card_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="5dp"
...
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/amount_edittext"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="?attr/edit_text_background"
                android:ems="10"
                android:fontFamily="@font/comfortaa"
...
                android:inputType="numberDecimal"
                android:textColor="?attr/textColorPrimary"
                android:textColorHint="?attr/textColorSecondary"
                android:textSize="@dimen/primary_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/amount_seekbar"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/amount_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/content_card_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="5dp"
...
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/weight_edittext"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="?attr/edit_text_background"
                android:ems="10"
                android:fontFamily="@font/comfortaa"
...
                android:textSize="@dimen/primary_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/weight_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
...
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_article_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:clickable="true"
        android:onClick="onAddArticleFabClick"
...
