<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/article_recycler_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_article">


        <TextView
            android:id="@+id/article_name_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/comfortaa"
            android:text="TextView"
            android:textColor="?attr/textColorPrimary"
            android:textSize="@dimen/header2_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/article_amount_textview"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/comfortaa"
            android:textColor="?attr/textColorSecondary"
            android:textSize="@dimen/secondary_font_size"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/article_name_textview" />

        <TextView
            android:id="@+id/article_weight_textview"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/comfortaa"
            android:textColor="?attr/textColorSecondary"
            android:textSize="@dimen/secondary_font_size"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/article_amount_textview"
            app:layout_constraintStart_toEndOf="@+id/article_amount_textview"
            app:layout_constraintTop_toTopOf="@+id/article_amount_textview" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>