<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--  android:icon="?attr/icon" -->

    <item
        android:id="@+id/nav_shopping"
        android:icon="@drawable/nav_shopping_list_icon"
        android:title="Shopping" />

    <item
          android:id="@+id/nav_available"
          android:icon="@drawable/nav_available_icon"
          android:title="Storage" />

    <item
        android:id="@+id/nav_recipes"
        android:icon="@drawable/nav_recipe_list_icon"
        android:title="Recipes" />

    <item
        android:id="@+id/nav_to_cook"
        android:icon="@drawable/nav_to_cook_icon"
        android:title="To Cook" />

    <item
        android:id="@+id/nav_sync"
        android:icon="@drawable/nav_sync_icon"
        android:title="Synchronisieren" />

</menu>